--- a/src/main/resources/views/add-device-form.fxml
+++ b/src/main/resources/views/add-device-form.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 
 <VBox xmlns="http://javafx.com/javafx/17.0.2-ea"
       xmlns:fx="http://javafx.com/fxml/1"
@@ -12,25 +10,47 @@
     <Label text="Добавление нового прибора" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
 
     <GridPane hgap="10" vgap="10">
+        <!-- Существующие поля (твои оригинальные) -->
         <Label text="Наименование:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <TextField fx:id="nameField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        <TextField fx:id="nameField" GridPane.rowIndex="0" GridPane.columnIndex="1" prefWidth="200"/>
 
         <Label text="Тип:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-        <TextField fx:id="typeField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <TextField fx:id="typeField" GridPane.rowIndex="1" GridPane.columnIndex="1" prefWidth="200"/>
 
         <Label text="Инвентарный номер:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-        <TextField fx:id="inventoryNumberField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+        <TextField fx:id="inventoryNumberField" GridPane.rowIndex="2" GridPane.columnIndex="1" prefWidth="200"/>
 
         <Label text="Местонахождение:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-        <TextField fx:id="locationField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+        <TextField fx:id="locationField" GridPane.rowIndex="3" GridPane.columnIndex="1" prefWidth="200"/>
 
         <Label text="Статус:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-        <ComboBox fx:id="statusComboBox" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+        <ComboBox fx:id="statusComboBox" GridPane.rowIndex="4" GridPane.columnIndex="1" prefWidth="200"/>
+
+        <!-- Новые поля -->
+        <Label text="Производитель (опционально):" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
+        <TextField fx:id="manufacturerField" GridPane.rowIndex="5" GridPane.columnIndex="1" prefWidth="200" promptText="Например, Siemens"/>
+
+        <Label text="Год выпуска (опционально):" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+        <TextField fx:id="yearField" GridPane.rowIndex="6" GridPane.columnIndex="1" prefWidth="200" promptText="Год (число), напр. 2023"/>
+
+        <Label text="Доп. информация (опционально):" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
+        <TextArea fx:id="additionalInfoField" GridPane.rowIndex="7" GridPane.columnIndex="1" prefWidth="200" prefHeight="60" promptText="Любая дополнительная информация"/>
+
+        <!-- ВАЖНО: Добавь это для photoPathField -->
+        <Label text="Фото (несколько):" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
+        <HBox spacing="5" GridPane.rowIndex="8" GridPane.columnIndex="1">
+            <TextField fx:id="photoPathField" prefWidth="180" editable="false" promptText="Выберите файл"/>
+            <Button fx:id="photoChooseBtn" text="Выбрать фото" onAction="#onChooseFiles"/>
+        </HBox>
+
+        <!-- Список выбранных фото -->
+        <Label text="Выбранные фото:" GridPane.rowIndex="9" GridPane.columnIndex="0"/>
+        <ListView fx:id="selectedPhotosListView" GridPane.rowIndex="9" GridPane.columnIndex="1" prefHeight="100" prefWidth="200"/>
     </GridPane>
 
     <HBox spacing="10" alignment="CENTER_RIGHT">
         <Button text="Отмена" onAction="#onCancel"/>
-        <Button text="Добавить" onAction="#onAddDevice"/>
+        <Button text="Добавить" onAction="#onAddDevice" style="-fx-background-color: #2ecc71; -fx-text-fill: white;"/>
     </HBox>
 
     <Label fx:id="messageLabel" style="-fx-text-fill: red;"/>
