--- a/src/main/resources/views/add-device-form.fxml
+++ b/src/main/resources/views/add-device-form.fxml
@@ -22,23 +22,29 @@
         <Label text="Статус:" GridPane.rowIndex="4" GridPane.columnIndex="0" styleClass="form-label"/>
         <ComboBox fx:id="statusComboBox" GridPane.rowIndex="4" GridPane.columnIndex="1" prefWidth="200" styleClass="form-input"/>
 
-        <Label text="Производитель (опционально):" GridPane.rowIndex="5" GridPane.columnIndex="0" styleClass="form-label"/>
-        <TextField fx:id="manufacturerField" GridPane.rowIndex="5" GridPane.columnIndex="1" prefWidth="200" promptText="Например, Siemens" styleClass="form-input"/>
+        <Label text="Предел измерений:" GridPane.rowIndex="5" GridPane.columnIndex="0" styleClass="form-label"/>
+        <TextField fx:id="measurementLimitField" GridPane.rowIndex="5" GridPane.columnIndex="1" prefWidth="200" styleClass="form-input" promptText="В кг или МПа"/>
 
-        <Label text="Год выпуска (опционально):" GridPane.rowIndex="6" GridPane.columnIndex="0" styleClass="form-label"/>
-        <TextField fx:id="yearField" GridPane.rowIndex="6" GridPane.columnIndex="1" prefWidth="200" promptText="Год (число), напр. 2023" styleClass="form-input"/>
+        <Label text="Класс точности:" GridPane.rowIndex="6" GridPane.columnIndex="0"  styleClass="form-label"/>
+        <TextField fx:id="accuracyClassField" GridPane.rowIndex="6" GridPane.columnIndex="1" prefWidth="200" styleClass="form-input" promptText="Введите число в %"/>
 
-        <Label text="Доп. информация (опционально):" GridPane.rowIndex="7" GridPane.columnIndex="0" styleClass="form-label"/>
-        <TextArea fx:id="additionalInfoField" GridPane.rowIndex="7" GridPane.columnIndex="1" prefWidth="200" prefHeight="60" promptText="Любая дополнительная информация" styleClass="form-textarea"/>
+        <Label text="Производитель (опционально):" GridPane.rowIndex="7" GridPane.columnIndex="0" styleClass="form-label"/>
+        <TextField fx:id="manufacturerField" GridPane.rowIndex="7" GridPane.columnIndex="1" prefWidth="200" promptText="Например, ОАО Манотомь" styleClass="form-input"/>
 
-        <Label text="Фото (несколько):" GridPane.rowIndex="8" GridPane.columnIndex="0" styleClass="form-label"/>
-        <HBox spacing="5" GridPane.rowIndex="8" GridPane.columnIndex="1" styleClass="photo-picker">
+        <Label text="Год выпуска (опционально):" GridPane.rowIndex="8" GridPane.columnIndex="0" styleClass="form-label"/>
+        <TextField fx:id="yearField" GridPane.rowIndex="8" GridPane.columnIndex="1" prefWidth="200" promptText="Год (число), напр. 2023" styleClass="form-input"/>
+
+        <Label text="Доп. информация (опционально):" GridPane.rowIndex="9" GridPane.columnIndex="0" styleClass="form-label"/>
+        <TextArea fx:id="additionalInfoField" GridPane.rowIndex="9" GridPane.columnIndex="1" prefWidth="200" prefHeight="60" promptText="Любая дополнительная информация" styleClass="form-textarea"/>
+
+        <Label text="Фото (несколько):" GridPane.rowIndex="10" GridPane.columnIndex="0" styleClass="form-label"/>
+        <HBox spacing="5" GridPane.rowIndex="10" GridPane.columnIndex="1" styleClass="photo-picker">
             <TextField fx:id="photoPathField" prefWidth="180" editable="false" promptText="Выберите файл" styleClass="form-input"/>
             <Button fx:id="photoChooseBtn" text="Выбрать фото" onAction="#onChooseFiles" styleClass="photo-choose-btn"/>
         </HBox>
 
-        <Label text="Выбранные фото:" GridPane.rowIndex="9" GridPane.columnIndex="0" styleClass="form-label"/>
-        <ListView fx:id="selectedPhotosListView" GridPane.rowIndex="9" GridPane.columnIndex="1" prefHeight="100" prefWidth="200" styleClass="photo-list"/>
+        <Label text="Выбранные фото:" GridPane.rowIndex="11" GridPane.columnIndex="0" styleClass="form-label"/>
+        <ListView fx:id="selectedPhotosListView" GridPane.rowIndex="11" GridPane.columnIndex="1" prefHeight="100" prefWidth="200" styleClass="photo-list"/>
     </GridPane>
 
     <HBox spacing="10" alignment="CENTER_RIGHT" styleClass="form-buttons">
