09/13/25 added ExcelImportExportUtil.java and others changes

--- a/src/main/resources/styles/light-theme.css
+++ b/src/main/resources/styles/light-theme.css
@@ -463,3 +463,15 @@
     -fx-text-fill: red;
     -fx-padding-top: 10px;
 }
+
+/* Свойства строк таблицы */
+
+.even-row {
+    -fx-background-color: #b8b8b8;
+}
+.odd-row {
+    -fx-background-color: white;
+}
+.selected-row {
+    -fx-background-color: #7abcff;
+}
